--- a/express_webapp/package.json
+++ b/express_webapp/package.json
@@ -10,13 +10,17 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
+    "express-dynamic-helpers-patch": "^0.0.2",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "formidable": "^2.0.1",
     "http-errors": "~1.6.3",
+    "install": "^0.13.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "sport-track-db": "file:../sport-track-db",
-    "sqlite3": "^5.1.2"
+    "sqlite3": "^5.1.2",
+    "uuid": "^9.0.0"
   }
 }
